# namefile

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Makefile  README.md  dev-requirements.txt  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docs/: Makefile
docs/source/: conf.py  core.rst  index.rst
namefile/: __init__.py  core.py  version.py
tests/: test_core.py
