[tool.poetry]
name = "namefile"
version = "0.3.2"
description = "generate file name from file info"
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^21.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.2"
pyright = "^1.1.266"
isort = "5.10.1"
blue = "0.9.1"
coverage = "6.3.2"
pytest-cov = '3.0.0'
hypothesis = "^6.56.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
